--- a/WebAppSecond/Web.config
+++ b/WebAppSecond/Web.config
@@ -51,8 +51,8 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <!--<add name="TilausDBEntities" connectionString="metadata=res://*/Models.TilausDBModel.csdl|res://*/Models.TilausDBModel.ssdl|res://*/Models.TilausDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DSV1PSP\SQLEXPRESS;initial catalog=TilausDB;persist security info=True;user id=sa;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  <add name="TilausDBEntities" connectionString="metadata=res://*/Models.TilausDBModel.csdl|res://*/Models.TilausDBModel.ssdl|res://*/Models.TilausDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=northwindcareeriaserver.database.windows.net;initial catalog=dbtilaus;persist security info=True;user id=AdminKuru;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <!--<add name="TilausDBEntities" connectionString="metadata=res://*/Models.TilausDBModel.csdl|res://*/Models.TilausDBModel.ssdl|res://*/Models.TilausDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DSV1PSP\SQLEXPRESS;initial catalog=TilausDB;persist security info=True;user id=sa;password=ServerinSA;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="TilausDBEntities" connectionString="metadata=res://*/Models.TilausDBModel.csdl|res://*/Models.TilausDBModel.ssdl|res://*/Models.TilausDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=northwindcareeriaserver.database.windows.net;initial catalog=dbtilaus;persist security info=True;user id=AdminKuru;password=C4r33r14!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
